--- a/apiweb/src/main/resources/templates/index.html
+++ b/apiweb/src/main/resources/templates/index.html
@@ -4,19 +4,13 @@
 <meta charset="UTF-8" />
 	<title>Insert title here</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-route.js"></script>
 	<script src="./js/app.js"></script>
+	<script src="./js/controller/cliente-controller.js"></script>
+	<script src="./js/controller/estado-controller.js"></script>
+	<script src="./js/controller/cidade-controller.js"></script>
 </head>
-<body ng-controller="indexController" >
-	
-	Oi {{cliente.nome}} <br/>
-	
-	<input type="text" ng-model="cliente.nome"/>
-	
-	<input type="button" value="Salvar" ng-click="gravarCliente()" />
-	
-	<div ng-repeat = "cliente in clientes" >
-		{{cliente.id + "|" + cliente.nome}} <input type="button" value="excluir" ng-click="excluirCliente(cliente)" />
-	</div>
-	
+<body>
+	Olá eu sou um template.
 </body>
 </html>
