--- a/apiweb/src/main/resources/templates/index.html
+++ b/apiweb/src/main/resources/templates/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="appCliente" >
 <head>
+<base href="/" />
 <meta charset="UTF-8" />
 	<title>Insert title here</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
@@ -12,5 +13,11 @@
 </head>
 <body>
 	Olá eu sou um template.
+	
+	<a href="/clientes">Clientes</a>
+	
+	<div ng-view = "ng-view" >
+	
+	</div>
 </body>
 </html>
