--- a/apiweb/src/main/resources/templates/index.html
+++ b/apiweb/src/main/resources/templates/index.html
@@ -4,8 +4,8 @@
 <base href="/" />
 <meta charset="UTF-8" />
 	<title>Insert title here</title>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-route.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-route.js"></script>
 	<script src="./js/app.js"></script>
 	<script src="./js/controller/cliente-controller.js"></script>
 	<script src="./js/controller/estado-controller.js"></script>
@@ -14,7 +14,7 @@
 <body>
 	Olá eu sou um template.
 	
-	<a href="/clientes">Clientes</a>
+	<a href="/#/clientes">Clientes</a>
 	
 	<div ng-view = "ng-view" >
 	
